# vkbottle-example

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
migrations/models/: 0_20220326125905_init.sql
source/: __main__.py  app.py  config.py
source/blueprints/: __init__.py  about_blueprint.py  back_blueprint.py  sign_up_blueprint.py
source/database/: engine.py
source/database/models/: __init__.py  user_model.py
source/keyboards/: __init__.py  about_keyboard.py  home_keyboard.py
source/messages/: __init__.py  about_message.py  back_message.py  sign_up_message.py
source/middlewares/: __init__.py  user_exists_middleware.py
tests/: test_version.py
